--- a/SCA/Java/todolist-web-struts/pom.xml
+++ b/SCA/Java/todolist-web-struts/pom.xml
@@ -92,6 +92,7 @@
                 </exclusion>
                 <exclusion>
                     <artifactId>spring-web</artifactId>
+		<version>6.0.11</version>
                     <groupId>org.springframework</groupId>
                 </exclusion>
             </exclusions>
